# neurogenesis_graph_theory

./: README.md  config.py  main.py  pyproject.toml  simulation_metrics.csv
data/raw/: hippocampal_graph.pkl
src/: connectivity.py  functional_simulation.py  graph_model.py  simulation.py  simulation_plot.py  tempCodeRunnerFile.py  timelapse.py
